kubernetes/apps/toolhive/gateway/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp
spec:
  hostnames:
  - mcp.${SECRET_DOMAIN}
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: internal
    namespace: network
    sectionName: https
  rules:
  - backendRefs:
    - name: vmcp-tools-gateway
      port: 4483
    matches:
    - path:
        type: PathPrefix
        value: /
